--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <div id="app"></div>
 
     <script src="/index.js"></script>
-    <!-- <script src="/DSA/data-structure/index.js"></script> -->
+    <script src="/DSA/data-structure/index.js"></script>
+    <script>
+      console.log("Hello");
+    </script>
   </body>
 </html>
